--- a/msg.html
+++ b/msg.html
@@ -27,7 +27,10 @@
       </div>
     </div>
       
-
+    <section class="conteudo-msg">
+      <p>O conteudo das mensagens devem vir aqui nesta seção, quero que aqui seja exibido dinamicamente
+      usando js ou outra linguagem.</p>
+    </section>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
