--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 
       </div>
     </div>
+    
+    <footer>
+      <p><a href="#"><img src="img/coffee-5-64.png" alt="Colaboradores">Colaboradores.</a></p>
+      </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
